--- a/index.html
+++ b/index.html
@@ -121,16 +121,24 @@
     <div id="team-member-bubbles">
         <div class="hero">
             <div class="team-member-bubble team-member-outerLeft">
-                <i class="fa fa-commenting"></i>
+                <a href="#teamMemberOuterLeft" data-toggle="modal">
+                    <i class="fa fa-commenting"></i>
+                </a>
             </div>
             <div class="team-member-bubble team-member-innerLeft">
-                <i class="fa fa-commenting"></i>
+                <a href="#teamMemberInnerLeft" data-toggle="modal">
+                    <i class="fa fa-commenting"></i>
+                </a>
             </div>
             <div class="team-member-bubble team-member-innerRight">
-                <i class="fa fa-commenting"></i>
+                <a href="#teamMemberInnerRight" data-toggle="modal">
+                    <i class="fa fa-commenting"></i>
+                </a>
             </div>
             <div class="team-member-bubble team-member-outerRight">
-                <i class="fa fa-commenting"></i>
+                <a href="#teamMemberOuterRight" data-toggle="modal">
+                    <i class="fa fa-commenting"></i>
+                </a>
             </div>
             <div class="container">
                 <div class="row overlay-white team-catchphrase">
@@ -187,27 +195,20 @@
             </div>
         </div>
     </div>
+    <!-- Bernard profile -->
 </section>
 
-<!-- Bernard profile -->
-<div class="team-member-modal modal fade" id="teamMemberModal1" tabindex="-1" role="dialog" aria-hidden="true">
+<div class="element-modal modal fade" id="teamMemberOuterLeft" tabindex="-1" role="dialog" aria-hidden="true">
     <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="close-modal" data-dismiss="modal">
-                <div class="lr">
-                    <div class="rl">
-                    </div>
-                </div>
-            </div>
+        <div class="modal-content team-member-modal-content">
             <div class="container-fluid">
                 <div class="row row-no-pd">
-                    <div class="col-lg-12 col-no-pd">
-                        <div class="modal-body modal-body-no-pd">
+                    <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-no-pd">
+                        <div class="modal-body modal-body-no-pd team-member-modal-body">
                             <div class="team-member">
-                                <img src="img/team/p1-final.jpg" class="img-responsive img-circle" alt="Bernard Vignal">
-                                <h4>Bernard <span class="text-uppercase">Vignal</span></h4>
-                                <p class="text-muted">Auteur compositeur</p>
-                                <p class="text-muted">Voix lead, Guitare</p>
+                                <img src="img/team/p4-final.jpg" class="img-responsive img-circle" alt="Member 4">
+                                <h4>Muriel <span class="text-uppercase">Roger</span></h4>
+                                <p class="text-muted">Voix, Percussions légères</p>
                             </div>
                             <button type="button" class="btn btn-primary btn-close-modal" data-dismiss="modal">
                                 <i class="fa fa-times"></i>
@@ -220,6 +221,76 @@
         </div>
     </div>
 </div>
+<div class="element-modal modal fade" id="teamMemberInnerLeft" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content team-member-modal-content">
+            <div class="container-fluid">
+                <div class="row row-no-pd">
+                    <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-no-pd">
+                        <div class="modal-body modal-body-no-pd team-member-modal-body">
+                            <div class="team-member">
+                                <img src="img/team/p3-final.jpg" class="img-responsive img-circle" alt="Member 3">
+                                <h4>Cécile <span class="text-uppercase">Chabert</span></h4>
+                                <p class="text-muted">Voix, Percussions légères</p>
+                            </div>
+                            <button type="button" class="btn btn-primary btn-close-modal" data-dismiss="modal">
+                                <i class="fa fa-times"></i>
+                                Fermer
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="element-modal modal fade" id="teamMemberInnerRight" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content team-member-modal-content">
+            <div class="container-fluid">
+                <div class="row row-no-pd">
+                    <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-no-pd">
+                        <div class="modal-body modal-body-no-pd team-member-modal-body">
+                            <div class="team-member">
+                                <img src="img/team/p1-final.jpg" class="img-responsive img-circle" alt="Bernard Vignal">
+                                <h4>Bernard <span class="text-uppercase">Vignal</span></h4>
+                                <p class="text-muted">Auteur compositeur, Voix lead, Guitare</p>
+                            </div>
+                            <button type="button" class="btn btn-primary btn-close-modal" data-dismiss="modal">
+                                <i class="fa fa-times"></i>
+                                Fermer
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="element-modal modal fade" id="teamMemberOuterRight" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content team-member-modal-content">
+            <div class="container-fluid">
+                <div class="row row-no-pd">
+                    <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-no-pd">
+                        <div class="modal-body modal-body-no-pd team-member-modal-body">
+                            <div class="team-member">
+                                <img src="img/team/p2-final.jpg" class="img-responsive img-circle" alt="Member 2">
+                                <h4>Emmanuel <span class="text-uppercase">Megier</span></h4>
+                                <p class="text-muted">Guitare, Cajon, Percussions légères</p>
+                            </div>
+                            <button type="button" class="btn btn-primary btn-close-modal" data-dismiss="modal">
+                                <i class="fa fa-times"></i>
+                                Fermer
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <!-- Music Section -->
 <section id="music">
