--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 <section id="team" class="bg-light-gray">
     <div id="team-member-bubbles">
         <div class="hero">
-            <img data-src="img/team-bg-768w.jpg" title="Bernard Vignal, les membres" class="lazyload team-no-hero"/>
+            <img data-src="https://media-6af8.kxcdn.com/img/team-bg-768w.jpg" title="Bernard Vignal, les membres" class="lazyload team-no-hero"/>
             <div class="team-member-bubble team-member-outerLeft">
                 <a href="#teamMemberOuterLeft" data-toggle="modal">
                     <i class="fa fa-commenting"></i>
@@ -165,21 +165,21 @@
                                 <i class="fa fa-expand fa-3x"></i>
                             </div>
                         </div>
-                        <img data-src="img/gallery/2-preview.jpg" class="lazyload img-responsive" alt="Le groupe sur scène">
+                        <img data-src="https://media-6af8.kxcdn.com/img/gallery/2-preview.jpg" class="lazyload img-responsive" alt="Le groupe sur scène">
                     </a>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-6">
                     <div class="team-member">
-                        <img data-src="img/team/p1-final.jpg" class="lazyload img-responsive img-circle" alt="Bernard Vignal">
+                        <img data-src="https://media-6af8.kxcdn.com/img/team/p1-final.jpg" class="lazyload img-responsive img-circle" alt="Bernard Vignal">
                         <h2>Bernard <span class="text-uppercase">Vignal</span></h2>
                         <p class="text-muted">Auteur compositeur, Voix lead, Guitare</p>
                     </div>
                 </div>
                 <div class="col-sm-6">
                     <div class="team-member">
-                        <img data-src="img/team/p2-final.jpg" class="lazyload img-responsive img-circle" alt="Member 2">
+                        <img data-src="https://media-6af8.kxcdn.com/img/team/p2-final.jpg" class="lazyload img-responsive img-circle" alt="Member 2">
                         <h2>Emmanuel <span class="text-uppercase">Megier</span></h2>
                         <p class="text-muted">Guitare, Cajon, Percussions légères</p>
                     </div>
@@ -188,14 +188,14 @@
             <div class="row">
                 <div class="col-sm-6">
                     <div class="team-member">
-                        <img data-src="img/team/p3-final.jpg" class="lazyload img-responsive img-circle" alt="Member 3">
+                        <img data-src="https://media-6af8.kxcdn.com/img/team/p3-final.jpg" class="lazyload img-responsive img-circle" alt="Member 3">
                         <h2>Cécile <span class="text-uppercase">Chabert</span></h2>
                         <p class="text-muted">Voix, Percussions légères</p>
                     </div>
                 </div>
                 <div class="col-sm-6">
                     <div class="team-member">
-                        <img data-src="img/team/p4-final.jpg" class="lazyload img-responsive img-circle" alt="Member 4">
+                        <img data-src="https://media-6af8.kxcdn.com/img/team/p4-final.jpg" class="lazyload img-responsive img-circle" alt="Member 4">
                         <h2>Muriel <span class="text-uppercase">Roger</span></h2>
                         <p class="text-muted">Voix, Percussions légères</p>
                     </div>
@@ -214,7 +214,7 @@
                     <div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2 col-no-pd">
                         <div class="modal-body modal-body-no-pd team-member-modal-body">
                             <div class="team-member">
-                                <img data-src="img/team/p4-final.jpg" class="lazyload img-responsive img-circle" alt="Member 4">
+                                <img data-src="https://media-6af8.kxcdn.com/img/team/p4-final.jpg" class="lazyload img-responsive img-circle" alt="Member 4">
                                 <h2>Muriel <span class="text-uppercase">Roger</span></h2>
                                 <p class="text-muted">Voix, Percussions légères</p>
                             </div>
@@ -237,7 +237,7 @@
                     <div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2 col-no-pd">
                         <div class="modal-body modal-body-no-pd team-member-modal-body">
                             <div class="team-member">
-                                <img data-src="img/team/p3-final.jpg" class="lazyload img-responsive img-circle" alt="Member 3">
+                                <img data-src="https://media-6af8.kxcdn.com/img/team/p3-final.jpg" class="lazyload img-responsive img-circle" alt="Member 3">
                                 <h2>Cécile <span class="text-uppercase">Chabert</span></h2>
                                 <p class="text-muted">Voix, Percussions légères</p>
                             </div>
@@ -260,7 +260,7 @@
                     <div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2 col-no-pd">
                         <div class="modal-body modal-body-no-pd team-member-modal-body">
                             <div class="team-member">
-                                <img data-src="img/team/p1-final.jpg" class="lazyload img-responsive img-circle" alt="Bernard Vignal">
+                                <img data-src="https://media-6af8.kxcdn.com/img/team/p1-final.jpg" class="lazyload img-responsive img-circle" alt="Bernard Vignal">
                                 <h2>Bernard <span class="text-uppercase">Vignal</span></h2>
                                 <p class="text-muted">Auteur compositeur, Voix lead, Guitare</p>
                             </div>
@@ -283,7 +283,7 @@
                     <div class="col-md-4 col-md-offset-4 col-sm-8 col-sm-offset-2 col-no-pd">
                         <div class="modal-body modal-body-no-pd team-member-modal-body">
                             <div class="team-member">
-                                <img data-src="img/team/p2-final.jpg" class="lazyload img-responsive img-circle" alt="Member 2">
+                                <img data-src="https://media-6af8.kxcdn.com/img/team/p2-final.jpg" class="lazyload img-responsive img-circle" alt="Member 2">
                                 <h2>Emmanuel <span class="text-uppercase">Megier</span></h2>
                                 <p class="text-muted">Guitare, Cajon, Percussions légères</p>
                             </div>
@@ -304,16 +304,16 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="container-fluid">
-                    <div class="row video-content">
-                        <div class="col-lg-12">
-                            <a href="https://www.youtube.com/" target="_blank">
-                                <i class="fa fa-angle-double-right"></i>
-                                <i class="fa fa-youtube-square"></i>
-                                <i class="fa fa-angle-double-left"></i>
-                                <h1>Rejoignez notre chaine YouTube ...</h1>
-                            </a>
-                        </div>
-                    </div>
+                    <!--<div class="row video-content">-->
+                        <!--<div class="col-lg-12">-->
+                            <!--<a href="https://www.youtube.com/" target="_blank">-->
+                                <!--<i class="fa fa-angle-double-right"></i>-->
+                                <!--<i class="fa fa-youtube-square"></i>-->
+                                <!--<i class="fa fa-angle-double-left"></i>-->
+                                <!--<h1>Rejoignez notre chaine YouTube ...</h1>-->
+                            <!--</a>-->
+                        <!--</div>-->
+                    <!--</div>-->
                     <div class="row music-content">
                         <div class="player col-lg-12 col-no-pd">
                             <div class="audio-wrapper">
@@ -339,19 +339,19 @@
                                 <div class="playlist-controls"></div>
                                 <ul id="playlist">
                                     <li class="audio-track audio-track-even active">
-                                        <a href="audio/1-approche.mp3">
+                                        <a href="https://media-6af8.kxcdn.com/audio/1-approche.mp3">
                                             <i class="fa fa-play" aria-hidden="true"></i>
                                             <span class="audio-track-name">Approche, Approche</span>
                                         </a>
                                     </li>
                                     <li class="audio-track audio-track-odd ">
-                                        <a href="audio/2-un-beau-tresor.mp3">
+                                        <a href="https://media-6af8.kxcdn.com/audio/2-un-beau-tresor.mp3">
                                             <i class="fa fa-play" aria-hidden="true"></i>
                                             <span>Un beau trésor</span>
                                         </a>
                                     </li>
                                     <li class="audio-track audio-track-even ">
-                                        <a href="audio/3-le-blues-du-cycliste.mp3">
+                                        <a href="https://media-6af8.kxcdn.com/audio/3-le-blues-du-cycliste.mp3">
                                             <i class="fa fa-play" aria-hidden="true"></i>
                                             <span>Le blues du cycliste</span>
                                         </a>
@@ -370,7 +370,7 @@
                                 <i class="fa fa-expand fa-3x"></i>
                             </div>
                         </div>
-                        <img data-src="img/gallery/1-preview.jpg" class="lazyload img-responsive"
+                        <img data-src="https://media-6af8.kxcdn.com/img/gallery/1-preview.jpg" class="lazyload img-responsive"
                              alt="Cécile Chabert et Muriel Roger">
                     </a>
                 </div>
@@ -381,7 +381,7 @@
                                 <i class="fa fa-expand fa-3x"></i>
                             </div>
                         </div>
-                        <img data-src="img/gallery/4-preview.jpg" class="lazyload img-responsive"
+                        <img data-src="https://media-6af8.kxcdn.com/img/gallery/4-preview.jpg" class="lazyload img-responsive"
                              alt="Bernard Vignal et Emmanuel Megier">
                     </a>
                 </div>
@@ -501,7 +501,7 @@
                     <div class="col-lg-12 col-no-pd">
                         <div class="modal-body modal-body-no-pd">
                             <div class="img-wrapper">
-                                <img class="lazyload img-responsive img-centered" data-src="img/gallery/1.jpg" alt="">
+                                <img class="lazyload img-responsive img-centered" data-src="https://media-6af8.kxcdn.com/img/gallery/1.jpg" alt="">
                             </div>
                             <button type="button" class="btn btn-primary btn-close-modal" data-dismiss="modal">
                                 <i class="fa fa-times"></i>
@@ -529,7 +529,7 @@
                     <div class="col-lg-12 col-no-pd">
                         <div class="modal-body modal-body-no-pd">
                             <div class="img-wrapper">
-                                <img class="lazyload img-responsive img-centered" data-src="img/gallery/2.jpg" alt="">
+                                <img class="lazyload img-responsive img-centered" data-src="https://media-6af8.kxcdn.com/img/gallery/2.jpg" alt="">
                             </div>
                             <button type="button" class="btn btn-primary btn-close-modal" data-dismiss="modal">
                                 <i class="fa fa-times"></i>
@@ -557,7 +557,7 @@
                     <div class="col-lg-12 col-no-pd">
                         <div class="modal-body modal-body-no-pd">
                             <div class="img-wrapper">
-                                <img class="lazyload img-responsive img-centered" data-src="img/gallery/4.jpg" alt="">
+                                <img class="lazyload img-responsive img-centered" data-src="https://media-6af8.kxcdn.com/img/gallery/4.jpg" alt="">
                             </div>
                             <h2>Lorem ipsum dolor</h2>
                             <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p>
