--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link href="assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Droid+Serif:400,700,400italic,700italic|Dancing+Script:400,700|Roboto+Slab:400,100,300,700"
           rel="stylesheet" type="text/css">
-    <link href="assets/css/agency.css" rel="stylesheet">
+    <link href="assets/css/agency.v1.0.1.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -112,22 +112,34 @@
                  class="lazyload team-no-hero"/>
             <div class="team-member-bubble team-member-outerLeft">
                 <a href="#teamMemberOuterLeft" data-toggle="modal">
-                    <i class="fa fa-commenting"></i>
+                    <span class="fa-stack fa-lg">
+                        <i class="fa fa-commenting-o fa-stack-1x"></i>
+                        <i class="fa fa-commenting fa-stack-1x"></i>
+                    </span>
                 </a>
             </div>
             <div class="team-member-bubble team-member-innerLeft">
                 <a href="#teamMemberInnerLeft" data-toggle="modal">
-                    <i class="fa fa-commenting"></i>
+                    <span class="fa-stack fa-lg">
+                        <i class="fa fa-commenting-o fa-stack-1x"></i>
+                        <i class="fa fa-commenting fa-stack-1x"></i>
+                    </span>
                 </a>
             </div>
             <div class="team-member-bubble team-member-innerRight">
                 <a href="#teamMemberInnerRight" data-toggle="modal">
-                    <i class="fa fa-commenting"></i>
+                    <span class="fa-stack fa-lg">
+                        <i class="fa fa-commenting-o fa-stack-1x"></i>
+                        <i class="fa fa-commenting fa-stack-1x"></i>
+                    </span>
                 </a>
             </div>
             <div class="team-member-bubble team-member-outerRight">
                 <a href="#teamMemberOuterRight" data-toggle="modal">
-                    <i class="fa fa-commenting"></i>
+                    <span class="fa-stack fa-lg">
+                        <i class="fa fa-commenting-o fa-stack-1x"></i>
+                        <i class="fa fa-commenting fa-stack-1x"></i>
+                    </span>
                 </a>
             </div>
             <div class="container team-catchphrase-container">
@@ -451,7 +463,7 @@
 </section>
 
 <section id="contact">
-    <div class="overlay-light">
+    <div class="overlay">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
