--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <link href="assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Droid+Serif:400,700,400italic,700italic|Dancing+Script:400,700|Roboto+Slab:400,100,300,700"
           rel="stylesheet" type="text/css">
-    <link href="assets/css/agency.v1.0.1.css" rel="stylesheet">
+    <link href="assets/css/agency.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
