--- a/index.html
+++ b/index.html
@@ -12,18 +12,23 @@
     <meta name="apple-touch-fullscreen" content="yes">
     <meta name="author" content="Bernard Vignal">
 
-    <title>Bernard Vignal</title>
+    <title>Bernard Vignal, auteur-compositeur de chansons françaises</title>
     <meta name="description"
-          content="Bernard Vignal, auteur-compositeur de chansons françaises à Saint-Avit (Drôme). Son quatuor
+          content="Basé à Saint-Avit (Drôme), son quatuor
                     vous enchanteront dès le premier instant !"/>
     <meta name="copyright" content="Bernard Vignal, tous droits réservés © 2016"/>
     <meta name="robots" content="index, follow"/>
 
+    <meta property="og:title" content="The title" />
+    <meta property="og:type" content="The type" />
+    <meta property="og:url" content="http://url.com/" />
+    <meta property="og:image" content="http://image.jpg" />
+    
     <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Droid+Serif:400,700,400italic,700italic|Dancing+Script:400,700|Roboto+Slab:400,100,300,700"
           rel="stylesheet" type="text/css">
-    <link href="assets/css/agency.css" rel="stylesheet">
+    <link href="assets/css/agency.min.v102.css" rel="stylesheet">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
